      potentially have missing redirect flags has been fixed.
    * A bug in redirect handling when the branch changed but the trove
      name didn't has been fixed - conary will do a better job of
      determining what jobs to perform in this situation. (CNY-599, CNY-602)
    * Errors relating to PGP now just display the error instead of causing 
      conary to traceback. (CNY-591)

Changes in 1.0.21:
  o Client Changes:
    * The "conary migrate" command has changed behavior significantly
      in order to make it more useful for updating a system to exactly
      match a different group.  However, this change makes it much
      less useful for updating normal systems.  "conary migrate"
      should not be used without first reading the man page
      description of its behavior.  The old migrate behavior is now
      available by using "conary sync --full".  "conary syncchildren"
      has been renamed to "conary sync", and its behavior has also
      been modified slightly as a result.  The old behavior is
      available by using "conary sync --current". Please read the man
      page for a full description of the "sync" command as well.  (CNY-477)

  o Build Changes:
    * A "package" keyword parameter has been added to build actions,
      which specifies the package and/or component to which to assign
      the files that are added (not modified or deleted) by that build
      action.  For example, r.MakeInstall(package="foo") will place
      all the new files installed by the MakeInstall action into the
      "foo" package.  Thanks to Pavel Volkovitskiy for contributing
      this capability.  (CNY-562)
    * A "httpHeaders" keyword parameter has been added to the
      r.addArchive(), r.addPatch(), and r.addSource() source actions
      so that headers can be added to the HTTP request.

  o Bug Fixes:
    * The r.addPatch() build action no longer depends on nohup to
      create a file in the current directory (a bug introduced in