@@ -251,6 +251,7 @@ def doUpdate(cfg, changeSpecs, replaceFiles = False, tagScript = None,
     for path in fromFiles:
         cs = changeset.ChangeSetFromFile(path)
         fromChangesets.append(cs)
+    useAffinity = True
 
     # Look for items which look like files in the applyList and convert
     # them into fromChangesets w/ the primary sets
@@ -266,6 +267,7 @@ def doUpdate(cfg, changeSpecs, replaceFiles = False, tagScript = None,
             for trvInfo in cs.getPrimaryTroveList():
                 changeSpecs.append("%s=%s[%s]" % (trvInfo[0],
                       trvInfo[1].asString(), deps.formatFlavor(trvInfo[2])))
+            useAffinity = False
 
     applyList = cmdline.parseChangeList(changeSpecs, keepExisting, 
                                         updateByDefault, allowChangeSets=True)
@@ -288,7 +290,7 @@ def doUpdate(cfg, changeSpecs, replaceFiles = False, tagScript = None,
                   updateOnly = updateOnly,
                   removeNotByDefault = removeNotByDefault,
                   installMissing = installMissing,
-                  migrate = migrate)
+                  migrate = migrate, useAffinity = useAffinity)
 
 def _updateTroves(cfg, applyList, replaceFiles = False, tagScript = None, 
                                   keepExisting = False, depCheck = True,
@@ -303,7 +305,8 @@ def _updateTroves(cfg, applyList, replaceFiles = False, tagScript = None,
                                   syncChildren = False, 
                                   updateOnly = False, 
                                   removeNotByDefault = False, 
-                                  installMissing = False, migrate = False):
+                                  installMissing = False, migrate = False,
+                                  useAffinity=True):
 
     client = conaryclient.ConaryClient(cfg)
 
@@ -325,7 +328,7 @@ def _updateTroves(cfg, applyList, replaceFiles = False, tagScript = None,
                                updateOnly = updateOnly,
                                installMissing = installMissing, 
                                removeNotByDefault = removeNotByDefault,
-                               migrate = migrate)
+                               migrate = migrate, useAffinity = useAffinity)
     except:
         callback.done()
         raise
